--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,40 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
+:root{
+    --primary-color:#F97316;
+}
+
 body{
     font-family: 'Montserrat', sans-serif;
+}
+
+/** container **/
+.container{
+    padding-left:1rem;
+    padding-right:1rem;
+}
+
+.container-centered{
+    max-width:600px;
+    margin:auto;
+}
+
+/** links **/
+.link{
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.link-primary{
+    background-color: var(--primary-color);
+    border-radius: 0.5rem;
+    color:white;
+}
+
+.link-secondary{
+    color: var(--primary-color);
+    border-radius: 0.5rem;
+    border: 1px solid var(--primary-color);
 }
