--- a/styles.css
+++ b/styles.css
@@ -38,3 +38,13 @@ body{
     border-radius: 0.5rem;
     border: 1px solid var(--primary-color);
 }
+
+/** lists **/
+.list-non-bullet{
+    list-style: none;
+}
+
+.list-inline{
+    display: inline;
+    padding: 0rem 0.5rem;
+}
