--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
 body{
     font-family: 'Montserrat', sans-serif;
     margin: 0px;
+    text-align: justify;
 }
 
 hr{
@@ -50,6 +51,10 @@ hr{
     color: var(--primary-color);
     border-radius: 0.5rem;
     border: 1px solid var(--primary-color);
+}
+
+.link-blogs{
+    padding: 0rem;
 }
 
 /** lists **/
@@ -108,6 +113,10 @@ hr{
     color: var(--primary-color)
 }
 
+.hero-blogs{
+    padding-top: 1rem;
+}
+
 /** section **/
 .section{
     padding: 2rem;
@@ -142,6 +151,12 @@ hr{
 /** to get the reruired link in centre properly **/
 .footer ul{
     padding-inline-start: 0px;
+}
+
+.blog-image{
+    max-width: 500px;
+    display: block;
+    /* margin: auto; */
 }
 
 
