--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ hr{
 
 /** container **/
 .container{
+    padding: 1rem;
     padding-left:1rem;
     padding-right:1rem;
 }
@@ -45,12 +46,18 @@ hr{
     background-color: var(--primary-color);
     border-radius: 0.5rem;
     color:white;
+    display: block;
+    max-width: 140px;
+    margin: 1rem 1rem 1rem 0rem;
 }
 
 .link-secondary{
     color: var(--primary-color);
     border-radius: 0.5rem;
     border: 1px solid var(--primary-color);
+    display: block;
+    max-width: 140px;
+    margin: 1rem 1rem 1rem 0rem;
 }
 
 .link-blogs{
@@ -124,6 +131,10 @@ hr{
 
 .section h1{
     text-align: center;
+}
+
+.section-project{
+    padding: 2rem;
 }
 
 .ow{
