--- a/styles.css
+++ b/styles.css
@@ -160,7 +160,7 @@ hr{
     font-size: large;
 }
 
-/** to get the reruired link in centre properly **/
+/** to get the required link in centre properly **/
 .footer ul{
     padding-inline-start: 0px;
 }
